# gmail-extractor

./: .gitignore  Dockerfile  Makefile  README.md  check_json.sh  cloudbuild.yaml  config.yaml.example  csv_to_json.sh  docker-compose.yaml  pyproject.toml  search_to_csv.sh  update_bodies.sh  update_json_body.py
email-archive/: pyproject.toml  setup.py
email-archive/scripts/: performance_test.py
email-archive/src/email_archive/: __init__.py  store.py
email-archive/tests/: test_sidecars.py  test_store.py  test_store_attach.py
gmex/: __init__.py  cli.py
gmex-cli/: pyproject.toml  setup.py
gmex-cli/src/gmex_cli/: cli.py
gmex-sdk/: pyproject.toml  setup.py
gmex-sdk/src/gmex_sdk/: config.py  extractor.py  paths.py
scripts/: test_docker_e2e.py  test_e2e.sh
