[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-extractor"
version = "0.1.0"
description = "Extract Gmail messages to structured formats"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
gmex = "gmex.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]
